--- a/teacherweb/index.html
+++ b/teacherweb/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="additional-page-content"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
